--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
